--- a/recycle-hub/src/app/features/profile/profile.component.html
+++ b/recycle-hub/src/app/features/profile/profile.component.html
@@ -6,7 +6,7 @@
       <div class="bg-white rounded-3xl shadow-2xl overflow-hidden mb-12">
         <!-- Bannière profil -->
         <div class="h-32 bg-gradient-to-r from-green-200 to-green-400 relative">
-            <div class="flex justify-center pt-9  items-center w-full gap-24">
+            <div *ngIf="(currentUser$ | async)?.role === 'user'" class="flex justify-center pt-9  items-center w-full gap-24">
                 <div class="bg-white py-2 px-5 flex items-center gap-5  rounded-2xl shadow-lg hover:shadow-xl transition-shadow duration-300">
                   <div class="text-green-600 text-center text-3xl mb-2">♻️</div>
                   <h3 class="text-xl text-center font-bold text-gray-800 mb-2">Collectes Réalisées</h3>
